--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   image_picker: ^1.0.4
   tflite_v2: ^1.0.0
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/labels.txt
-    - assets/model_unquant.tflite
+    - assets/dating_model.tflite
+    - assets/model.tflite
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
